sliver/style.css
/* ... */
#sidebar_footer .serendipity_edit_nugget a { color: #F012BE; /* fuchsia */ }

#content {
    margin: 0;
    overflow: hidden; /* if entries content is non-whitespaced, i.e to long for content box, hide overlapping */
    padding: 0 0 1em 0;
}
#sidebar_footer.onefull .serendipitySideBarItem {
    display: inline;
    margin: 0;
    float: left;
}
#content div#center {
    margin: 40px 0 0;
    padding: 0;
    text-align: center;
}
#content div#center table {
    margin: auto;
}
#search_results_nav.results_navigation,
#archives_nav.archives_index_navigation,
#categories_nav.categories_index_navigation {
    margin: .75em;
    padding: 0 .25em;
    border-bottom: 1px solid #B10DC9;
    -webkit-box-shadow: 0 4px 6px rgba(0, 0, 0, 0.15);
    -moz-box-shadow: 0 4px 6px rgba(0, 0, 0, 0.15);
    -o-box-shadow: 0 4px 6px rgba(0, 0, 0, 0.15);
    box-shadow: 0 -6px #FFF, 0 4px 6px rgba(0, 0, 0, 0.15), -6px 0 4px -2px #FFF, 6px 0 4px -2px #F9F9F9;
}
#search_results_nav.results_navigation {
    padding: .25em;
}
.archives_index, .categories_index {
    list-style: outside none none;
    margin: 1em auto;
    padding: 0;
}
.serendipity_overview_noentries {
    margin: 1em 3em; /* indents to ul li */
}
#theme_chooser select {
    width: 90%;
}

/* =============================================================================
   ???
   ========================================================================== */

.author {
    display: inline;
    font-style: normal;
}
.published {
    border-bottom: medium none;
    cursor: auto;
    font-weight: normal;
}


/* =============================================================================
   Sidebar container styles
   ========================================================================== */

/* syndication, quicksearch, archives, categories, authors, superuser, etc.
   staticpage plugin, entrylinks plugin, freetag plugin, guestbook plugin, etc. */
.serendipitySideBarContent > a {
    display: block;
}
.serendipitySideBarContent .serendipity_edit_nugget  {
    float: right;
    font-size: 0.875em;/*86%;*/
}
#sidebar_top.container_serendipity_plugin_freetag.serendipity_edit_nugget {
    top: 80px;
    margin-bottom: .8em;
}
#sidebar_left .container_serendipity_superuser_plugin div.serendipitySideBarContent,
#sidebar_right .container_serendipity_superuser_plugin div.serendipitySideBarContent {
   line-height: 30px;
}
#sidebar_left .container_serendipity_superuser_plugin .serendipitySideBarContent .serendipity_edit_nugget,
#sidebar_right .container_serendipity_superuser_plugin .serendipitySideBarContent .serendipity_edit_nugget  {
    margin-top: -.8em;
    margin-bottom: -.8em;
}
#sidebar_left .container_serendipity_plugin_guestbook div.serendipitySideBarContent,
#sidebar_right .container_serendipity_plugin_guestbook div.serendipitySideBarContent {
    color: #555;
    font-size: 86%;
    margin-top: .8em;
}
#serendipity_categories_list .serendipity_xml_icon  img { vertical-align: text-bottom; margin-left: .2em; }


/* =============================================================================
   Additional plugin styles
   ========================================================================== */

#staticpage_customtags.serendipity_entry  header {
    margin-top: 1.5em;
}
.staticpage_metainfo p {
    background: #f6f6f6;
    border: 1px solid #ddd;
}

.innerbox {
    background-color: #D0D0D0;
    border: 1px solid #999999;
    margin: 1.6em;
    padding: 4px;
}
.innerbox p {
    text-align: justify;
}
.freetag_cloud > .serendipity_date { text-align: left;}
.serendipity_freetag_taglist {
    /* continue - declared in starter and extended styles */
    /* rounded corners */
    -webkit-border-radius: 1em 1em 1em 1em;
    -moz-border-radius: 1em 1em 1em 1em;
    -o-border-radius: 1em 1em 1em 1em;
    border-radius: 1em 1em 1em 1em; /* html5 standard */
    /* shadow settings */
    -webkit-box-shadow: 0px 2px 3px #BBB;
    -moz-box-shadow: 0px 2px 3px #BBB;
    -o-box-shadow: 0px 2px 3px #BBB;
    box-shadow: 0px 2px 3px #BBB;
    /* radial */
    background-color:#dbf0ff;
    background-image: -moz-radial-gradient(65% 50%, ellipse farthest-corner, #dbf0ff, rgba(254, 236, 234, 0.5) ,#ffffff 100%);
    background-image: -webkit-radial-gradient(65% 50%, ellipse farthest-corner, #dbf0ff, rgba(254, 236, 234, 0.5) ,#ffffff 100%);
    background-image: -o-radial-gradient(65% 50%, ellipse farthest-corner, #dbf0ff, rgba(254, 236, 234, 0.5) ,#ffffff 100%);
    background-image: -ms-radial-gradient(65% 50%, ellipse farthest-corner, #dbf0ff, rgba(254, 236, 234, 0.5) ,#ffffff 100%);
    background-image: radial-gradient(65% 50%, ellipse farthest-corner, #dbf0ff, rgba(254, 236, 234, 0.5) ,#ffffff 100%);
    font-size: smaller;
    overflow: auto;
}

/* sidebar linklist */
a.node:link, a.node:visited, a.node:hover,
a.folder:link, a.folder:visited, a.folder:hover {
    background: transparent none;
    color: #333 !important;
}
/* recententries sidebar date list */
.serendipity_recententries_entrydate {
    margin: 0px;
    color: #999;
}

#sidebar_top .serendipity_freeTag_xmlTagEntry span {
    font-size: 1em !important; /* overwrite inline weighted styles in top sidebar */
}
#serendipity_emoticonchooser_comment a:hover, #serendipity_emoticonchooser_comment  a:active, #serendipity_emoticonchooser_comment a:focus,
#guestbook_entrypaging a, #guestbook_entrypaging a:hover, .serendipityPlug a:hover {
    background: none transparent;
}
/* hide contactform plugin comment form email text */
.serendipity_staticpage .serendipity_comment_spamblock {
    display: none; /*container_serendipity_plugin_staticpage*/
    visibility: hidden;
}

.serendipity_plugin_staticpage .depth_0,
.container_serendipity_plugin_staticpage .depth_0 { padding-left: 0px; }
.serendipity_plugin_staticpage .depth_10,
.container_serendipity_plugin_staticpage .depth_10 { padding-left: 10px; }
/* ... */

